Add OpenDota API data fetching and storing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=dota2-match-insights
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/dotadb
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.springframework.boot.autoconfigure=INFO
+api.key = 5794149E5879B48DB7F23D91CAC70993
+account.id = 1534593665
+
+#https://api.steampowered.com/IDOTA2Match_570/GetMatchDetails/v1/?key=5794149E5879B48DB7F23D91CAC70993&match_id=8378520862
+#
+#https://api.steampowered.com/IDOTA2Match_570/GetMatchHistory/v1/?key=5794149E5879B48DB7F23D91CAC70993
